fix custom file control vertical alignment

--- a/assets/sass/bootstrap/_custom-form.scss
+++ b/assets/sass/bootstrap/_custom-form.scss
@@ -42,7 +42,7 @@
       content: "";
       opacity: $custom-file-button-opacity;
       position: absolute;
-        top: $textfield-padding-top;
+        top: 0;
         right: 0;
         bottom: 0;
       width: $material-icon-size;
