--- a/css/material.css
+++ b/css/material.css
@@ -2801,7 +2801,7 @@ pre code {
   content: "";
   opacity: 0.38;
   position: absolute;
-  top: 0.5rem;
+  top: 0;
   right: 0;
   bottom: 0;
   width: 24px;
